test/runnable/imports/test_linkedin_import.d
pragma (linkedin) int f(int x)
{
    int linkedin = 12;
    return x + linkedin;
}
