test/fail_compilation/fail183.d
void f(in final const scope int x) {}
void g(final const scope in int x) {}

